--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "Jaime Muñoz",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "hapi": "^18.1.0"
+  },
   "devDependencies": {
     "standard": "^14.3.4"
   }
