--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Un sitio como stackOverFlow",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon",
-    "lint" : "standard",
+    "dev": "nodemon",
+    "lint": "standard",
     "lint-fix": "standard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jaime Muñoz",
   "license": "MIT",
   "dependencies": {
+    "@hapi/inert": "^6.0.2",
     "hapi": "^18.1.0"
   },
   "devDependencies": {
