--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/hapi": "^20.0.0",
-    "@hapi/inert": "^6.0.2"
+    "@hapi/inert": "^6.0.2",
+    "@hapi/vision": "^6.0.1",
+    "handlebars": "^4.7.6"
   },
   "devDependencies": {
     "standard": "^14.3.4"
