--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.2",
     "@hapi/vision": "^6.0.1",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "joi": "^17.2.0"
   },
   "devDependencies": {
     "standard": "^14.3.4"
