--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.2",
+    "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.0.1",
-    "handlebars": "^4.7.6",
-    "joi": "^17.2.0"
+    "handlebars": "^4.7.6"
   },
   "devDependencies": {
     "standard": "^14.3.4"
