--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hapi/inert": "^6.0.2",
     "@hapi/joi": "^17.1.1",
     "@hapi/vision": "^6.0.1",
+    "firebase-admin": "^9.1.0",
     "handlebars": "^4.7.6"
   },
   "devDependencies": {
