se agrego el paquete de boom para manejar errores

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jaime Muñoz",
   "license": "MIT",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.2",
     "@hapi/joi": "^17.1.1",
