--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@hapi/vision": "^6.0.1",
     "bcrypt": "^5.0.0",
     "firebase-admin": "^9.1.0",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "standard": "^14.3.4"
