--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "@hapi/good": "^9.0.0",
+    "@hapi/good-console": "^9.0.0",
     "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.2",
     "@hapi/joi": "^17.1.1",
