--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jaime Muñoz",
   "license": "MIT",
   "dependencies": {
+    "@hapi/basic": "^6.0.0",
     "@hapi/boom": "^9.1.0",
     "@hapi/good": "^9.0.0",
     "@hapi/good-console": "^9.0.0",
