--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.2",
     "@hapi/joi": "^17.1.1",
+    "@hapi/scooter": "^6.0.0",
     "@hapi/vision": "^6.0.1",
     "bcrypt": "^5.0.0",
+    "blankie": "^5.0.0",
     "firebase-admin": "^9.1.0",
     "handlebars": "^4.7.6",
     "uuid": "^8.3.0"
